--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
